kubernetes/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptolink-app-deployment
  namespace: cryptolink-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cryptolink-webui
  template:
    metadata:
      labels:
        app: cryptolink-webui
    spec:
      # Używamy dedykowanego ServiceAccount z ograniczonymi uprawnieniami (RBAC)
      serviceAccountName: cryptolink-app
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: cryptolink-webui
        image: ${IMAGE_NAME}
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
              - ALL
