kubernetes/04-postgres-service.yaml
# kubernetes/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  namespace: cryptolink-app
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-db
